--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             },
                             'paint': {
                                 'circle-radius': 7,
-                                'circle-color': "white"
+                                'circle-color': #808080
                             }
                         });
 
@@ -269,7 +269,7 @@
                             if (popups[0]) popups[0].remove();
                             const popup = new mapboxgl.Popup({ closeOnClick: true })
                                 .setLngLat(currentFeature.geometry.coordinates)
-                                .setHTML("<h3>" + currentFeature.properties.City + "</h3>")
+                                .setHTML("<h3>" + currentFeature.properties.Name + "</h3>")
                                 .addTo(map);
                         }
 
