--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         a {
-            color: #404040;
+            color: #ffffff;
             text-decoration: none;
         }
 
@@ -102,11 +102,11 @@
 
         .listings .item.active .title,
         .listings .item .title:hover {
-            color: gray;
+            color: #F1823B;
         }
 
         .listings .item.active {
-            background-color: #f8f8f8;
+            background-color: #bdbbbb;
         }
 
         ::-webkit-scrollbar {
@@ -153,7 +153,7 @@
         }
 
         .mapboxgl-popup-content h3 {
-            background: #91c949;
+            background: #F1823B;
             color: #fff;
             margin: 0;
             display: block;
@@ -191,7 +191,7 @@
 <body>
     <div class='sidebar'>
         <div class='heading'>
-            <h1>Best Friends Action Teams</h1>
+            <h1>Grassroots Action Teams</h1>
         </div>
         <div id='listings' class='listings'></div>
     </div>
@@ -247,8 +247,8 @@
                                 'data': data
                             },
                             'paint': {
-                                'circle-radius': 7,
-                                'circle-color': #808080
+                                'circle-radius': 5,
+                                'circle-color': #F1823B
                             }
                         });
 
@@ -301,7 +301,7 @@
 
                                 /* Add details to the individual listing. */
                                 var details = listing.appendChild(document.createElement('div'));
-                                details.innerHTML = prop.Name;
+                                details.innerHTML = prop.FacebookGroup;
                                 if (prop.phone) {
                                     details.innerHTML += ' · ' + prop.phoneFormatted;
                                 }
