--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         a {
-            color: #404040;
+            color: #ffffff;
             text-decoration: none;
         }
 
@@ -44,7 +44,7 @@
 
         .sidebar {
             position: absolute;
-            width: 33.3333%;
+            width: 20%;
             height: 100%;
             top: 0;
             left: 0;
@@ -58,8 +58,8 @@
 
         .map {
             position: absolute;
-            left: 33.3333%;
-            width: 66.6666%;
+            left: 20%;
+            width: 80%;
             top: 0;
             bottom: 0;
         }
@@ -102,7 +102,7 @@
 
         .listings .item.active .title,
         .listings .item .title:hover {
-            color: blue;
+            color: #b0b0b0;
         }
 
         .listings .item.active {
