--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         /* Marker tweaks */
         .marker {
-  background-image: url('https://github.com/JuliaSobczak/BFF-Local-Teams/blob/master/marker%20(1).png');
+  background-image: url('https://github.com/JuliaSobczak/BFF-Local-Teams/blob/master/paws.png');
   background-size: cover;
   width: 50px;
   height: 50px;
