--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         .sidebar {
             position: absolute;
-            width: 33.3333%;
+            width: 25%;
             height: 100%;
             top: 0;
             left: 0;
@@ -58,8 +58,8 @@
 
         .map {
             position: absolute;
-            left: 33.3333%;
-            width: 66.6666%;
+            left: 25%;
+            width: 75%;
             top: 0;
             bottom: 0;
         }
@@ -102,11 +102,11 @@
 
         .listings .item.active .title,
         .listings .item .title:hover {
-            color: blue;
+            color: #9b9b9b;
         }
 
         .listings .item.active {
-            background-color: #f8f8f8;
+            background-color: #bdbdbd;
         }
 
         ::-webkit-scrollbar {
@@ -121,7 +121,7 @@
         }
 
         ::-webkit-scrollbar-thumb {
-            background: #00853e;
+            background: #F1823B;
             border-radius: 0;
         }
 
@@ -153,7 +153,7 @@
         }
 
         .mapboxgl-popup-content h3 {
-            background: #91c949;
+            background: #F1823B;
             color: #fff;
             margin: 0;
             display: block;
@@ -183,7 +183,7 @@
         }
 
         .mapboxgl-popup-anchor-top>.mapboxgl-popup-tip {
-            border-bottom-color: #91c949;
+            border-bottom-color: #F1823B;
         }
     </style>
 </head>
@@ -191,7 +191,7 @@
 <body>
     <div class='sidebar'>
         <div class='heading'>
-            <h1>Best Friends Action Teams</h1>
+            <h1>GrassRoots Action Teams</h1>
         </div>
         <div id='listings' class='listings'></div>
     </div>
