--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
         .listings .item.active .title,
         .listings .item .title:hover {
-            color: #9b9b9b;
+            color: #3d3d3f;
         }
 
         .listings .item.active {
-            background-color: #bdbdbd;
+            background-color: #ededed;
         }
 
         ::-webkit-scrollbar {
@@ -191,7 +191,7 @@
 <body>
     <div class='sidebar'>
         <div class='heading'>
-            <h1>GrassRoots Action Teams</h1>
+            <h1> Grassroots Action Teams</h1>
         </div>
         <div id='listings' class='listings'></div>
     </div>
@@ -215,7 +215,7 @@
             style: 'mapbox://styles/juliasobczak/ckd6fa77o03js1ik1s7upamu4', //stylesheet location
             center: [-99.140625,
                 39.90973623453719], // starting position
-            zoom: 2,// starting zoom
+            zoom: 4,// starting zoom
             transformRequest: transformRequest
         });
 
@@ -259,7 +259,7 @@
                         function flyToLocation(currentFeature) {
                             map.flyTo({
                                 center: currentFeature,
-                                zoom: 15
+                                zoom: 8
                             });
                         }
 
@@ -269,7 +269,7 @@
                             if (popups[0]) popups[0].remove();
                             const popup = new mapboxgl.Popup({ closeOnClick: true })
                                 .setLngLat(currentFeature.geometry.coordinates)
-                                .setHTML("<h3>" + currentFeature.properties.City + "</h3>")
+                                .setHTML("<h3>" + currentFeature.properties.Name + "</h3>")
                                 .addTo(map);
                         }
 
@@ -301,7 +301,7 @@
 
                                 /* Add details to the individual listing. */
                                 var details = listing.appendChild(document.createElement('div'));
-                                details.innerHTML = prop.city;
+                                details.innerHTML = prop.City;
                                 if (prop.phone) {
                                     details.innerHTML += ' · ' + prop.phoneFormatted;
                                 }
@@ -324,7 +324,7 @@
 
                                 link.addEventListener('click', function (e) {
                                     const clickedListing = location.geometry.coordinates;
-                                    flyToLocation(clickedListing, 11);
+                                    flyToLocation(clickedListing, 8);
                                     createPopup(location);;
 
                                     var activeItem = document.getElementsByClassName('active');
