--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         a {
-            color: #404040;
+            color: #ffffff;
             text-decoration: none;
         }
 
@@ -69,7 +69,7 @@
             background-color: #F1823B;
             border-bottom: 1px solid #eee;
             height: 70px;
-            line-height: 60px;
+            line-height: 670px;
             padding: 0 10px;
         }
 
@@ -154,12 +154,12 @@
 
         .mapboxgl-popup-content h3 {
             background: #F1823B;
-            color: #fff;
+            color: #3d3d3f;
             margin: 0;
             display: block;
             padding: 10px;
             border-radius: 3px 3px 0 0;
-            font-weight: 700;
+            font-weight: 400;
             margin-top: -15px;
         }
 
