--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
                                 var link = listing.appendChild(document.createElement('a'));
                                 link.href = '#';
                                 link.className = 'title';
-                                link.id = "link-" + prop.Name;
-                                link.innerHTML = prop.Name;
+                                link.id = "link-" + prop.Notes;
+                                link.innerHTML = prop.City;
 
                                 /* Add details to the individual listing. */
                                 var details = listing.appendChild(document.createElement('div'));
