--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
             background: #fff;
             background-color: #F1823B;
             border-bottom: 1px solid #eee;
-            color: #ffffff;
             height: 70px;
-            line-height: 70px;
+            line-height: 670px;
             padding: 0 10px;
         }
 
@@ -216,7 +215,7 @@
             style: 'mapbox://styles/juliasobczak/ckd6fa77o03js1ik1s7upamu4', //stylesheet location
             center: [-99.140625,
                 39.90973623453719], // starting position
-            zoom: 3,// starting zoom
+            zoom: 4,// starting zoom
             transformRequest: transformRequest
         });
 
@@ -270,8 +269,7 @@
                             if (popups[0]) popups[0].remove();
                             const popup = new mapboxgl.Popup({ closeOnClick: true })
                                 .setLngLat(currentFeature.geometry.coordinates)
-                                .setHTML("<h3>" + currentFeature.properties.Name + "</h3>"+
-      '<h4>' + currentFeature.properties.FacebookGroup + '</h4>'))
+                                .setHTML("<h3>" + currentFeature.properties.Name + "</h3>")
                                 .addTo(map);
                         }
 
@@ -303,7 +301,9 @@
 
                                 /* Add details to the individual listing. */
                                 var details = listing.appendChild(document.createElement('div'));
-                                details.innerHTML = prop.City;
+                                details.innerHTML = prop.Name;
+                                if (prop.FacebookGroup) {
+                                    details.innerHTML += ' Facebook: ' + prop.FacebookGroup;
                                 }
 
 
