--- a/index.html
+++ b/index.html
@@ -185,6 +185,15 @@
         .mapboxgl-popup-anchor-top>.mapboxgl-popup-tip {
             border-bottom-color: #F1823B;
         }
+        // Add marker style
+        .marker {
+  background-image: url('mapbox-icon.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
     </style>
 </head>
 
@@ -238,7 +247,7 @@
                 }, function (err, data) {
                     map.on('load', function () {
 
-                        //Add the the layer to the map 
+                        //Add the layer to the map 
                         map.addLayer({
                             'id': 'csvData',
                             'type': 'circle',
@@ -251,6 +260,18 @@
                                 'circle-color': "purple"
                             }
                         });
+                        // add markers to map
+geojson.features.forEach(function(marker) {
+
+  // create a HTML element for each feature
+  var el = document.createElement('div');
+  el.className = 'marker';
+
+  // make a marker for each feature and add to the map
+  new mapboxgl.Marker(el)
+    .setLngLat(marker.geometry.coordinates)
+    .addTo(map);
+});
 
 
                         buildLocationList(data);
