--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         }
         // Add marker style
         .marker {
-  background-image: url('mapbox-icon.png');
+  background-image: url('https://github.com/JuliaSobczak/BFF-Local-Teams/blob/master/paws.25MP.png');
   background-size: cover;
   width: 50px;
   height: 50px;
