comment out console.log

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         }
 
                         map.on('click', 'csvData', function (e) {
-                            console.log(e.features[0].geometry)
+                            // console.log(e.features[0].geometry)
                             createPopup(e.features[0])
                         });
 
