--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 }, function (err, data) {
                     map.on('load', function () {
                         map.loadImage(
-                            '/paws.25MP.png',
+                            '/paws_white.png',
                             function (error, image) {
                                 if (error) throw error;
                                 map.addImage('paws', image);
