--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                                 /* Add details to the individual listing. */
                                 var details = listing.appendChild(document.createElement('div'));
                                 details.innerHTML = prop.Name;
-                                //if (prop.FacebookGroup) {
-                                    //details.innerHTML += ' Facebook: ' + prop.FacebookGroup;
+                                if (prop.FacebookGroup) {
+                                    details.innerHTML += ' Facebook: ' + prop.FacebookGroup;
                                 }
 
 
